# sec-scraper

./: .gitignore  LICENSE  SEC_SCRAPER_DOC.md  __init__.py  pyproject.toml  requirements.txt  sec_api_test.ipynb  sec_class.py
docker/: docker-compose.yaml  docker_guide.md
docs/: classDiagram.md  docker_guide.md
envs/: local_install_airflow.py
envs/docker/: docker-compose.yaml  dockerfile
main/: file_downloader.py  processor.py  scraper.py  sec.py  storer.py  ticker.py
utils/: _dataclasses.py  _generic.py  _logger.py  _mapping.py  _requester.py  _utils.py
utils/database/: _connector.py
